<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.synclite.dbreader</groupId>
	<artifactId>synclite-dbreader</artifactId>
	<version>${revision}</version>
	<packaging>war</packaging>
	<parent>
		<groupId>com.synclite.dbreader</groupId>
		<artifactId>root</artifactId>
		<version>${revision}</version>
	</parent>
	<build>
		<plugins>
		    <!-- Clean the output directory -->
		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-clean-plugin</artifactId>
		      <version>3.1.0</version>
		      <executions>
		        <execution>
		          <id>clean-output</id>
		          <phase>pre-clean</phase>
		          <goals>
		            <goal>clean</goal>
		          </goals>
		          <configuration>
		            <filesets>
		              <fileset>
		                <directory>${project.basedir}/src/main/webapp/WEB-INF/lib</directory>
		                <includes>
		                  <include>**/*</include>
		                </includes>
		              </fileset>
		            </filesets>
		          </configuration>
		        </execution>
		      </executions>
		    </plugin>
	
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/lib</outputDirectory>
							<resources>							
								<resource>
									<directory>${project.basedir}/../core/target/dbreader</directory>
									<includes>
										<include>synclite-dbreader.jar</include>
										<include>synclite-dbreader.bat</include>
										<include>synclite-dbreader.sh</include>
										<include>synclite.version</include>
									</includes>
								</resource>
								<resource>
									<directory>${project.basedir}/../core/target/dbreader/lib</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>					
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.3</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.43.0.0</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>	

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>1.7.30</version>
		</dependency>
		
		<dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>
        
		<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
		<dependency>
		    <groupId>org.quartz-scheduler</groupId>
		    <artifactId>quartz</artifactId>
		    <version>2.5.0-rc1</version>
		</dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.10.0</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.12.403</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
		<dependency>
		    <groupId>org.mongodb</groupId>
		    <artifactId>mongodb-driver-sync</artifactId>
		    <version>5.0.0</version>
		</dependency>

	</dependencies>
</project>